[gd_scene load_steps=4 format=3 uid="uid://b5pmh1flamv7s"]

[ext_resource type="Theme" uid="uid://qkfcmq8oqw2k" path="res://resources/menu_theme.tres" id="1_htxhk"]
[ext_resource type="Script" path="res://menus/level_select.gd" id="1_tlu6c"]
[ext_resource type="PackedScene" uid="uid://d1e2gxthcybiw" path="res://menus/back_button.tscn" id="2_icpb8"]

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource("1_tlu6c")

[node name="BackButton" parent="." instance=ExtResource("2_icpb8")]
exit_to = "main_menu"

[node name="Level1" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.075
anchor_top = 0.15
anchor_right = 0.075
anchor_bottom = 0.15
offset_left = -24.0
offset_top = -56.0
offset_right = 88.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_htxhk")
text = "1"

[node name="Level2" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.174
anchor_top = 0.15
anchor_right = 0.174
anchor_bottom = 0.15
offset_left = -23.72
offset_top = -56.0
offset_right = 88.28
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
text = "2"

[node name="Level3" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.274
anchor_top = 0.15
anchor_right = 0.274
anchor_bottom = 0.15
offset_left = -23.72
offset_top = -56.0
offset_right = 88.28
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
text = "3"

[node name="Level4" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = -23.72
offset_top = -56.0
offset_right = 88.28
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
text = "4"

[node name="Level5" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 105.28
offset_top = -56.0
offset_right = 217.28
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
text = "5"

[node name="Level6" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 233.28
offset_top = -56.0
offset_right = 345.28
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "6"

[node name="Level7" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 361.28
offset_top = -56.0
offset_right = 473.28
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "7"

[node name="Level8" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 489.28
offset_top = -56.0
offset_right = 601.28
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "8"

[node name="Level9" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 617.28
offset_top = -56.0
offset_right = 729.28
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "9"

[node name="Level10" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.075
anchor_top = 0.15
anchor_right = 0.075
anchor_bottom = 0.15
offset_left = -24.0
offset_top = 72.0
offset_right = 88.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_htxhk")
disabled = true
text = "10"

[node name="Level11" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.174
anchor_top = 0.15
anchor_right = 0.174
anchor_bottom = 0.15
offset_left = -23.72
offset_top = 72.0
offset_right = 88.28
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "11"

[node name="Level12" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.274
anchor_top = 0.15
anchor_right = 0.274
anchor_bottom = 0.15
offset_left = -23.72
offset_top = 72.0
offset_right = 88.28
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "12"

[node name="Level13" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = -23.72
offset_top = 72.0
offset_right = 88.28
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "13"

[node name="Level14" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 105.28
offset_top = 72.0
offset_right = 217.28
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "14"

[node name="Level15" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 233.28
offset_top = 72.0
offset_right = 345.28
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "15"

[node name="Level16" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 361.28
offset_top = 72.0
offset_right = 473.28
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "16"

[node name="Level17" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 489.28
offset_top = 72.0
offset_right = 601.28
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "17"

[node name="Level18" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.15
anchor_right = 0.374
anchor_bottom = 0.15
offset_left = 617.28
offset_top = 72.0
offset_right = 729.28
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxhk")
disabled = true
text = "18"

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level6" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level7" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level8" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level9" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level10" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level11" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level12" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level13" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Level14" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level15" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level16" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level17" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level18" to="." method="_on_level_5_pressed"]
